--- a/budget_tracker/package.json
+++ b/budget_tracker/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "chart.js": "^4.4.2",
     "core-js": "^3.8.3",
+    "firebase": "^10.11.1",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.1",
