--- a/budget_tracker/package.json
+++ b/budget_tracker/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "chart.js": "^4.4.2",
+    "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
     "firebase": "^10.11.1",
     "register-service-worker": "^1.7.2",
