--- a/budget_tracker/package.json
+++ b/budget_tracker/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "start": "webpack serve --config webpack.config.js"
   },
   "dependencies": {
     "chart.js": "^4.4.3",
@@ -26,7 +27,12 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "gh-pages": "^6.1.1"
+    "express": "^4.19.2",
+    "gh-pages": "^6.1.1",
+    "vite": "^5.2.11",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "eslintConfig": {
     "root": true,
